ordbok_uib_no: remove iframe border

--- a/yatetradki/uitools/iframe-mix.html
+++ b/yatetradki/uitools/iframe-mix.html
@@ -7,18 +7,18 @@
     <body>
         <div class="fullw top">
             <div class="left">
-                <iframe src="http://localhost:5660/ordbok/inflect/${word}" title="inflection"></iframe>
+                <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="inflection"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/lexin/word/${word}" title="lexin"></iframe>
+                <iframe src="http://localhost:5660/lexin/word/${word}" frameBorder="0" title="lexin"></iframe>
             </div>
         </div>
         <div class="fullw bottom">
             <div class="left">
-                <iframe src="http://localhost:5660/glosbe/noru/${word}" title="glosbe-noru"></iframe>
+                <iframe src="http://localhost:5660/glosbe/noru/${word}" frameBorder="0" title="glosbe-noru"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/glosbe/noen/${word}" title="glosbe-enru"></iframe>
+                <iframe src="http://localhost:5660/glosbe/noen/${word}" frameBorder="0" title="glosbe-enru"></iframe>
             </div>
         </div>
     </body>
