--- a/yatetradki/uitools/iframe-nor.html
+++ b/yatetradki/uitools/iframe-nor.html
@@ -7,10 +7,10 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <iframe src="http://localhost:5660/ordbok/word/${word}" title="ordbok"></iframe>
+                <iframe src="http://localhost:5660/ordbok/word/${word}" frameBorder="0" title="ordbok"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/naob/word/${word}" title="naob"></iframe>
+                <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe>
             </div>
         </div>
     </body>
