ordbok_uib_no: replace no.wiktionary with glosbe-enno

--- a/yatetradki/uitools/iframe-mix.html
+++ b/yatetradki/uitools/iframe-mix.html
@@ -18,7 +18,7 @@
                 <iframe src="http://localhost:5660/glosbe/noru/${word}" frameBorder="0" title="glosbe-noru"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/glosbe/noen/${word}" frameBorder="0" title="glosbe-enru"></iframe>
+                <iframe src="http://localhost:5660/glosbe/noen/${word}" frameBorder="0" title="glosbe-noen"></iframe>
             </div>
         </div>
     </body>
