--- a/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <div class="fullw fullh">
-            <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="inflection"></iframe>
+            <!-- <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="inflection"></iframe> -->
+            <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
         </div>
     </body>
 </html>
