--- a/yatetradki/uitools/ordbok/static/html/iframe-h.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-h.html
@@ -9,5 +9,11 @@
         <p>Help</p>
         <p>Alt-h -- this help view</p>
         <p>Alt-[!@#$$qwfp] -- corresponding views</p>
+        <p>Ctrl-q -- quit</p>
+        <p>Ctrl-l -- focus input text field</p>
+        <p>Ctrl-w -- toggle active mode. In active mode the program monitors clipboard
+        and grabs its contents if it's a text, so that you can pin ordbok window
+        on top of other windows and get translations by just double-clicking (selecting)
+        the words in another app or windiw.</p>
     </body>
 </html>
