--- a/yatetradki/uitools/ordbok/static/html/iframe-w.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-w.html
@@ -7,7 +7,7 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
+                <!-- <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe> -->
             </div>
             <div class="right">
                 <!-- <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe> -->
