--- a/yatetradki/uitools/ordbok/static/html/iframe-q.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-q.html
@@ -7,10 +7,10 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <iframe src="http://localhost:5660/ordbok/word/${word}" frameBorder="0" title="ordbok"></iframe>
+                <!-- <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe> -->
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe>
+                <!-- <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe> -->
             </div>
         </div>
     </body>
