ordbok_uib_no: add hackish google translate

--- a/yatetradki/uitools/ordbok/static/html/iframe-r.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-r.html
@@ -10,7 +10,7 @@
                 <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
             </div>
             <div class="right">
-                <!-- <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe> -->
+                <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
             </div>
         </div>
     </body>
