ordbok_uib_no: add support for http://norsk.dicts.aulismedia.com/

--- a/yatetradki/uitools/ordbok/static/html/iframe-e.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-e.html
@@ -6,12 +6,13 @@
     </head>
     <body>
         <div class="fullh">
-            <div class="left">
+            <iframe src="http://localhost:5660/aulismedia/norsk/${word}" frameBorder="0" title="aulismedia"></iframe>
+<!--            <div class="left">-->
                 <!-- <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe> -->
-            </div>
-            <div class="right">
+<!--            </div>-->
+<!--            <div class="right">-->
                 <!-- <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe> -->
-            </div>
+<!--            </div>-->
         </div>
     </body>
 </html>
