ordbok_uib_no: send invalidation request on ctrl+enter

--- a/yatetradki/uitools/ordbok/static/html/iframe-h.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-h.html
@@ -7,6 +7,8 @@
     <body>
         <sup>${word}</sup>
         <p>Help</p>
+        <p>Enter -- force send request with the current word</p>
+        <p>Ctrl+Enter -- invalidate cache and send request with the current word</p>
         <p>Alt-h -- this help view</p>
         <p>Alt-[!@#$$qwfp] -- corresponding views</p>
         <p>Ctrl-q -- quit</p>
