mindmap: blue rect + white text

--- a/yatetradki/uitools/mindmap/main.html
+++ b/yatetradki/uitools/mindmap/main.html
@@ -87,6 +87,10 @@ header {
 input {
     width: 400px;
 }
+body {
+    font-family: Nevermind;
+}
+@font-face { font-family: Nevermind; src: url('/fonts/NeverMind-Regular.ttf'); } 
         </style>
     </head>
     <body>
