mindmap: finish with paths for bidirectional layout

--- a/yatetradki/uitools/mindmap/main.html
+++ b/yatetradki/uitools/mindmap/main.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="main.css"/>
     </head>
     <body>
-        <header>
-            <h1><a href="/">Mindmap</a></h1>
-        </header>
+        <!-- <header> -->
+            <!-- <h1><a href="/">Mindmap</a></h1> -->
+        <!-- </header> -->
         <div id="main">
             loading...
         </div>
