ordbok_uib_no: remove deceased ordbok

--- a/yatetradki/uitools/ordbok/static/html/iframe-mix.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-mix.html
@@ -7,7 +7,8 @@
     <body>
         <div class="fullw top">
             <div class="left">
-                <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="inflection"></iframe>
+                <!-- <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="inflection"></iframe> -->
+                <iframe src="http://localhost:5660/ordbokene/inflect/${word}" frameBorder="0" title="ordbokene-inflection"></iframe>
             </div>
             <div class="right">
                 <iframe src="http://localhost:5660/lexin/word/${word}" frameBorder="0" title="lexin"></iframe>
