--- a/yatetradki/uitools/ordbok/static/html/iframe-nor.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-nor.html
@@ -7,7 +7,8 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <iframe src="http://localhost:5660/ordbok/word/${word}" frameBorder="0" title="ordbok-word"></iframe>
+                <!-- <iframe src="http://localhost:5660/ordbok/word/${word}" frameBorder="0" title="ordbok-word"></iframe> -->
+                <iframe src="http://localhost:5660/ordbokene/word/${word}" frameBorder="0" title="ordbokene-word"></iframe>
             </div>
             <div class="right">
                 <iframe src="http://localhost:5660/naob/word/${word}" frameBorder="0" title="naob"></iframe>
