--- a/yatetradki/uitools/ordbok/static/html/iframe-third.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-third.html
@@ -7,14 +7,14 @@
     <body>
         <div class="left">
             <div class="fullw top">
-                <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="ordbok-inflection"></iframe>
+                <!-- <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="ordbok-inflection"></iframe> -->
             </div>
             <div class="fullw bottom">
-                <iframe src="http://localhost:5660/ordbokene/inflect/${word}" frameBorder="0" title="ordbokene-inflection"></iframe>
+                <!-- <iframe src="http://localhost:5660/ordbokene/inflect/${word}" frameBorder="0" title="ordbokene-inflection"></iframe> -->
             </div>
         </div>
         <div class="fullh right">
-            <iframe src="http://localhost:5660/ordbokene/word/${word}" frameBorder="0" title="ordbokene-word"></iframe>
+            <!-- <iframe src="http://localhost:5660/ordbokene/word/${word}" frameBorder="0" title="ordbokene-word"></iframe> -->
         </div>
     </body>
 </html>
