ordbok_uib_no: support DeepL

--- a/yatetradki/uitools/ordbok/static/html/iframe-r.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-r.html
@@ -10,7 +10,12 @@
                 <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
+                <div class="fullw top">
+                    <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
+                </div>
+                <div class="fullw bottom">
+                    <iframe src="http://localhost:5660/deepl/noen/${word}" frameBorder="0" title="deepl-noen"></iframe>
+                </div>
             </div>
         </div>
     </body>
