--- a/yatetradki/uitools/ordbok/static/html/iframe-third.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-third.html
@@ -11,7 +11,12 @@
                 <iframe src="http://localhost:5660/glosbe/enno/${word}" frameBorder="0" title="glosbe-enno"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/cambridge/enno/${word}" frameBorder="0" title="cambridge"></iframe>
+                <div class="fullw top">
+                    <iframe src="http://localhost:5660/cambridge/enno/${word}" frameBorder="0" title="cambridge"></iframe>
+                </div>
+                <div class="fullw bottom">
+                    <iframe src="http://localhost:5660/deepl/enno/${word}" frameBorder="0" title="deepl-enno"></iframe>
+                </div>
             </div>
         </div>
         <!-- <div class="left"> -->
