--- a/yatetradki/uitools/ordbok/static/html/iframe-r.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-r.html
@@ -7,16 +7,10 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
+                <iframe src="http://localhost:5660/glosbe/enno/${word}" frameBorder="0" title="glosbe-enno"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/trex/noen/${word}" frameBorder="0" title="trex-noen"></iframe>
-                <!-- <div class="fullw top">
-                    <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
-                </div>
-                <div class="fullw bottom">
-                    <iframe src="http://localhost:5660/deepl/noen/${word}" frameBorder="0" title="deepl-noen"></iframe>
-                </div> -->
+                <iframe src="http://localhost:5660/cambridge/enno/${word}" frameBorder="0" title="cambridge"></iframe>
             </div>
         </div>
     </body>
