--- a/yatetradki/uitools/ordbok/static/html/iframe-third.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-third.html
@@ -7,29 +7,11 @@
     <body>
         <div class="fullh">
             <div class="left">
-                <!-- <iframe src="http://localhost:5660/wiktionary/no/${word}" frameBorder="0" title="wiktionary"></iframe> -->
-                <iframe src="http://localhost:5660/glosbe/enno/${word}" frameBorder="0" title="glosbe-enno"></iframe>
+                <iframe src="http://localhost:5660/dsl/word/${word}" frameBorder="0" title="dsl"></iframe>
             </div>
             <div class="right">
-                <iframe src="http://localhost:5660/cambridge/enno/${word}" frameBorder="0" title="cambridge"></iframe>
-                <!-- <div class="fullw top">
-                    <iframe src="http://localhost:5660/cambridge/enno/${word}" frameBorder="0" title="cambridge"></iframe>
-                </div>
-                <div class="fullw bottom">
-                    <iframe src="http://localhost:5660/deepl/enno/${word}" frameBorder="0" title="deepl-enno"></iframe>
-                </div> -->
+                <iframe src="http://localhost:5660/trex/noen/${word}" frameBorder="0" title="trex-noen"></iframe>
             </div>
         </div>
-        <!-- <div class="left"> -->
-        <!--     <div class="fullw top"> -->
-        <!--         &#60;&#33;&#45;&#45; <iframe src="http://localhost:5660/ordbok/inflect/${word}" frameBorder="0" title="ordbok-inflection"></iframe> &#45;&#45;&#62; -->
-        <!--     </div> -->
-        <!--     <div class="fullw bottom"> -->
-        <!--         &#60;&#33;&#45;&#45; <iframe src="http://localhost:5660/ordbokene/inflect/${word}" frameBorder="0" title="ordbokene-inflection"></iframe> &#45;&#45;&#62; -->
-        <!--     </div> -->
-        <!-- </div> -->
-        <!-- <div class="fullh right"> -->
-        <!--     &#60;&#33;&#45;&#45; <iframe src="http://localhost:5660/ordbokene/word/${word}" frameBorder="0" title="ordbokene-word"></iframe> &#45;&#45;&#62; -->
-        <!-- </div> -->
     </body>
 </html>
