ordbok_uib_no: gtrans: +enno

--- a/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
@@ -1,14 +1,21 @@
 <html>
+
 <head>
     <style>
     </style>
     <link href="/static/css/iframe.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <div class="fullh">
         <div class="left">
             <div class="fullw top">
-                <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
+                <div class="fullh left">
+                    <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
+                </div>
+                <div class="fullh right">
+                    <iframe src="http://localhost:5660/gtrans/enno/${word}" frameBorder="0" title="gtrans_enno"></iframe>
+                </div>
             </div>
             <div class="fullw bottom">
                 <div class="fullh left">
