ordbok_uib_no: use stateful deepl for faster translation

--- a/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
+++ b/yatetradki/uitools/ordbok/static/html/iframe-fourth.html
@@ -9,6 +9,19 @@
 <body>
     <div class="fullh">
         <div class="left">
+            <div class="fullw">
+                <div class="height33">
+                    <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
+                </div>
+                <div class="height33">
+                    <iframe src="http://localhost:5660/deepl/noen/${word}" frameBorder="0" title="deepl_noen"></iframe>
+                </div>
+                <div class="height33">
+                    <iframe src="http://localhost:5660/deepl/noru/${word}" frameBorder="0" title="deepl_noru"></iframe>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="left">
             <div class="fullw top">
                 <div class="fullh left">
                     <iframe src="http://localhost:5660/gtrans/noen/${word}" frameBorder="0" title="gtrans_noen"></iframe>
@@ -25,7 +38,7 @@
                     <iframe src="http://localhost:5660/deepl/enno/${word}" frameBorder="0" title="deepl-enno"></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="right">
             <iframe src="http://localhost:5660/trex/enno/${word}" frameBorder="0" title="trex-enno"></iframe>
         </div>
